--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -85,7 +85,7 @@ class: inverse, center, middle
 
 # Abraham Wald
 
-### Surtout connu pour se travaux sur l'analyse séquentielle, nous présenterons certains de ses travaux moins connus
+### Surtout connu pour se travaux sur l'analyse séquentielle, nous présenterons certains de ses travaux moins connus.
 
 ---
 class: inverse, center, middle
@@ -237,9 +237,13 @@ Les avions revenaient du combat couverts de trous de balles, mais les trous n'é
 
 ### Les trous de balles manquants
 
-Les officiers de l'armée y ont vu une opportunité d'efficacité.
+Les officiers de l'armée voulaient obtenir la même protection avec moins de blindage, en se concentrant sur les endroits en ayant davantage besoin.
 
-Obtenir la même protection avec moins de blindage, si on se concentre sur les endroits en ayant davantage besoin.
+--
+
+> *The military was inclined to provide protection for those parts that on returning planes showed the most hits.*
+
+--
 
 Ils demandèrent à Wald quelle quantité de blindage ajouter aux diverses parties de l'avion.
 
@@ -362,6 +366,11 @@ background-size: cover
 ???
 
 STS-51-L crew: (front row) Michael J. Smith, Dick Scobee, Ronald McNair; (back row) Ellison Onizuka, Christa McAuliffe, Gregory Jarvis, Judith Resnik
+
+---
+class: center, middle
+
+<iframe width="700" height="394" src="https://www.youtube.com/embed/j4JOjcDFtBE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ---
 
@@ -593,6 +602,10 @@ class: center, inverse, middle
 |    Avions revenus avec 4 coups au but | 2      |
 |    Avions revenus avec 5 coups au but | 2      |
 
+--
+
+> *It seems a little crazy, but what we really want to do is figure out what all the missing numbers are, or at least estimate them in a reasonable way. It looks at first sight as though this is a task for a conjuror rather than a mathematician.*
+
 ---
 
 ### Quelques notations
@@ -662,7 +675,7 @@ D_i &=& p_i \left( N_{j\geq i} \right) \\
 
 --
 
-Nous pouvons résoudre l'équation précédente par induction sur $i$ car nous savons que $D_0=0$. Ainsi:
+Nous pouvons résoudre l'équation précédente par récurrence sur $i$ car nous savons que $D_0=0$. Ainsi:
 
 $$\begin{eqnarray*} 
 D_0 &=& 0 \\
@@ -759,7 +772,7 @@ $$\begin{eqnarray*}
 
 ### Un exemple
 
-Supposons que $N=400$ avions ont été envoyés en mission. Le nombre d'avion survivants est:
+Supposons que $N=400$ avions ont été envoyés en mission. Le nombre d'avions survivants est:
 
 $$\begin{eqnarray*} 
 S_0 &=& 320 \\
@@ -795,6 +808,21 @@ $$\frac{32}{q}+\frac{20}{q^2}+\frac{4}{q^3}+\frac{2}{q^4}+\frac{2}{q^5}=80$$
 que nous pouvons écrire sous forme de polynôme de degré cinq:
 
 $$ 80q^5-32q^4-20q^3-4q^2-2q-2=0$$
+---
+
+Si nous représentons le polynôme précédent.
+
+```{r,echo=FALSE,fig.align='center'}
+ggplot(data = data.frame(x = c(0,1)), aes(x))+
+  stat_function(fun = polynome,
+                args = list(data = wald),
+                geom = "line",
+                colour = "blue")+
+  scale_x_continuous(breaks=seq(0,1,0.1))+
+  ylim(-5,2)+
+  xlab("q")+
+  ylab("")
+```
 
 ---
 
@@ -833,8 +861,8 @@ D_2 &=& p_2 \left( N - S_0 - S_1 - D_1 \right) \\
 
 ```{r, echo=FALSE}
 D <- tibble::enframe((waldD(wald)), value = "Nombre") %>% 
-  mutate(Di = name-1, 'Probabilité' = Nombre/sum(Nombre)) %>% 
-  select(Di, Nombre, 'Probabilité')
+  mutate(Di = name-1, 'Fraction sur 400' = Nombre/wald[1]) %>% 
+  select(Di, Nombre, 'Fraction sur 400')
 D %>% 
   kable(format = "html")
 ```
